--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Unplagged - An Error Occured</title>
-</head>
-<body>
-  <h1>An error occurred</h1>
-  <h2><?php echo $this->message ?></h2>
 
-  <?php if (isset($this->exception)): ?>
-  
+<div class="alert alert-error unclosable"><?php echo $this->message ?></div>
+
+<?php if(isset($this->exception)): ?>
+
   <h3>Exception information:</h3>
   <p>
-      <b>Message:</b> <?php echo $this->exception->getMessage() ?>
+    <b>Message:</b> <?php echo $this->exception->getMessage() ?>
   </p>
 
   <h3>Stack trace:</h3>
@@ -23,7 +16,5 @@
   <pre><?php echo $this->escape(var_export($this->request->getParams(), true)) ?>
   </pre>
 
-  <?php endif ?>
-
-</body>
-</html>
+  <?php
+ endif ?>
