--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,10 +1,17 @@
 <?php
+$languageString = Zend_Registry::getInstance()->Zend_Locale->getLanguage();
 $defaultConfig = Zend_Registry::getInstance()->config->default;
 $applicationName = $defaultConfig->applicationName;
 $this->title = $this->translate('Welcome to %s', $applicationName);
 $this->headTitle($this->title);
 ?>
-<div class="welcome-message well"><?php echo $this->translate($defaultConfig->welcomeMessage); ?></div>
+<div class="welcome-message well">
+<?php if($languageString === 'de'): ?>
+  <?= $defaultConfig->welcomeMessage->de ?>
+<?php else: ?>
+  <?= $defaultConfig->welcomeMessage->default ?>
+<?php endif; ?>
+</div>
 <?php if(count($this->barcodes > 0)): ?>
   <div class="barcodes-big">  
     <?php foreach($this->barcodes as $barcode): ?>
