--- a/application/views/scripts/bibtex/list.phtml
+++ b/application/views/scripts/bibtex/list.phtml
@@ -28,7 +28,7 @@ $this->headTitle($this->title);
       <?php endforeach; ?>
     <?php else: ?>
       <tr>
-        <td colspan="4" class="no-label"><?php echo $this->translate("No documents found."); ?></td>
+        <td colspan="6" class="no-label"><?php echo $this->translate("No entries found."); ?></td>
       </tr>
     <?php endif; ?>
   </tbody>
