--- a/application/views/scripts/document/list.phtml
+++ b/application/views/scripts/document/list.phtml
@@ -37,3 +37,5 @@ $this->headTitle($this->title);
   </tbody>
 </table>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
+
+<a class="btn btn-primary" href="/document/create"><i class="icon-document-add icon-fam"></i><?php echo $this->translate("Create a document"); ?></span></a>
