--- a/application/views/scripts/case/list.phtml
+++ b/application/views/scripts/case/list.phtml
@@ -28,4 +28,4 @@ $this->headTitle($this->title);
 </table> 
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
-<a class="btn btn-primary" href="/case/create"><i class="icon-create-case icon-fam"></i><?php echo $this->translate("Create a new case"); ?></a>
+<a class="btn btn-primary" href="/case/create"><i class="icon-case-add icon-fam"></i><?php echo $this->translate("Create a new case"); ?></a>
