--- a/application/views/scripts/document/page/list.phtml
+++ b/application/views/scripts/document/page/list.phtml
@@ -2,13 +2,18 @@
 <h3><?php echo $this->translate("Pages overview"); ?></h3>
 
 <div class="default-container">
-<div class="document-page-overview">
-  <?php $i = 0; ?>
-  <?php foreach($this->paginator as $page): ?>
-  <div class="page percentage-<?php echo $page->getPlagiarismPercentage(); ?>">
-    <a href="/document_page/show/id/<?php echo $page->getId(); ?>"><?php echo Unplagged_Helper::formatDocumentPageNumber($page->getPageNumber()); ?></a>
+  <div class="document-page-overview">
+    <?php if(count($this->paginator)): ?>
+      <?php foreach($this->paginator as $page): ?>
+        <div class="page percentage-<?php echo $page->getPlagiarismPercentage(); ?>">
+          <a href="/document_page/show/id/<?php echo $page->getId(); ?>"><?php echo Unplagged_Helper::formatDocumentPageNumber($page->getPageNumber()); ?></a>
+        </div>
+      <?php endforeach; ?>
+    <?php else: ?>
+      <?php echo $this->translate("No pages found."); ?>
+    <?php endif; ?>
   </div>
-  <?php endforeach; ?>
-</div>
 </div>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
+
+<a class="btn btn-primary" href="/document_page/create/document/<?php echo $this->document->getId(); ?>"><i class="icon-page-add icon-fam"></i><?php echo $this->translate("Create a page"); ?></span></a>
