Changes to welcome message

--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -73,6 +73,6 @@
     <div class="pagewrap">
       <header role="banner" class="clearfix">
         <div class="beta-patch"></div>
-        <h1 class="ir">Unplagged - The Plagiarism Detection Cockpit</h1>
+        <h1 class="ir"><a href="<?= $this->baseUrl(); ?>">Unplagged - The Plagiarism Detection Cockpit</a></h1>
         <nav><?php echo $this->navigation()->menu(); ?></nav>
       </header>
