--- a/application/views/scripts/notification/recent-activity.phtml
+++ b/application/views/scripts/notification/recent-activity.phtml
@@ -6,7 +6,7 @@ $this->headTitle($this->title);
   <?php foreach($this->paginator as $notification): ?>
     <div class="activity-item">
       <div class="activity">
-        <div class="image"><img class="avatar-small" src="<?php echo $notification->getUser()->getAvatar(); ?>" /></div>
+        <div class="image"><img class="avatar-small" src="<?php echo Unplagged_Helper::getAvatarPath($notification->getUser()); ?>" /></div>
         <div class="details">
           <div class="title-wrapper">
             <h4>
