Removed case files from menu when no case selected

--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -33,7 +33,7 @@
               <ul>
                 <li><a href="<?php echo $this->baseUrl('auth/logout'); ?>"><?php echo $this->translate("Logout"); ?></a></li>
                 <li><a href="<?php echo $this->baseUrl('user/edit'); ?>"><?php echo $this->translate("Edit Profile"); ?></a></li>
-                <li><a href="<?php echo $this->baseUrl('user/settings'); ?>"><?php echo $this->translate("Settings"); ?></a></li>
+                <!-- <li><a href="<?php echo $this->baseUrl('user/settings'); ?>"><?php echo $this->translate("Settings"); ?></a></li>-->
               </ul>
             </div>
           </div>
