--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -498,10 +498,15 @@ footer[role=contentinfo]{
   position: relative;
 }
 
+.ie8 .navigation li, .ie9 .navigation li {
+  max-height: 38px;
+}
+
 .navigation li:hover, .navigation li.active {
   background-color: white;
   color: #484C51;
 }
+
 
 .navigation li:hover a, .navigation li.active a {
   color: #484C51;
@@ -2370,7 +2375,7 @@ li.plupload_droptext {
   }
   nav .navigation li {
     display: block;
-    margin: 0 0 2px 0;
+    margin: 0 0 1px 0;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
