getting rid of php short tags

--- a/application/views/scripts/file/upload.phtml
+++ b/application/views/scripts/file/upload.phtml
@@ -29,13 +29,13 @@ if($maxPostSize<$maxFileSize){
 ?>
 
 <div id="upload-queue"
-     data-maxFileSize="<?= $maxPostSize; ?>"
+     data-maxFileSize="<?php echo $maxPostSize; ?>"
      data-showAddToCase="<?php echo ($currentCase) ? 'true' : ''; ?>"
-     data-close="<?= $this->translate('Close'); ?>" 
-     data-addToCase="<?= $this->translate('Add to current case'); ?>" 
-     data-redirect="<?= $this->baseUrl('user/files'); ?>" 
-     data-makePublic="<?= $this->translate('Make public'); ?>" 
-     data-save="<?= $this->translate('Save'); ?>" 
-     data-file-information="<?= $this->translate('File information'); ?>" 
-     data-description="<?= $this->translate('Description'); ?>" 
-     data-filename="<?= $this->translate('Filename'); ?>"></div>
+     data-close="<?php echo $this->translate('Close'); ?>" 
+     data-addToCase="<?php echo $this->translate('Add to current case'); ?>" 
+     data-redirect="<?php echo $this->baseUrl('user/files'); ?>" 
+     data-makePublic="<?php echo $this->translate('Make public'); ?>" 
+     data-save="<?php echo $this->translate('Save'); ?>" 
+     data-file-information="<?php echo $this->translate('File information'); ?>" 
+     data-description="<?php echo $this->translate('Description'); ?>" 
+     data-filename="<?php echo $this->translate('Filename'); ?>"></div>
