--- a/application/views/scripts/document/fragment/list.phtml
+++ b/application/views/scripts/document/fragment/list.phtml
@@ -8,6 +8,7 @@ $this->headTitle($this->title);
       <th><?php echo $this->translate("Title"); ?></th>
       <th style="width: 70px;"><?php echo $this->translate("Page from"); ?></th>
       <th style="width: 70px;"><?php echo $this->translate("Page to"); ?></th>
+      <th style="width: 70px;"><?php echo $this->translate("State"); ?></th>
       <th style="width: 100px;"><?php echo $this->translate("Source"); ?></th>
       <th class="fit-content"><?php echo $this->translate("Actions"); ?></th>
     </tr>
@@ -19,6 +20,7 @@ $this->headTitle($this->title);
           <td data-label="<?php echo $this->translate("Title"); ?>"><a href="<?php echo $fragment->getDirectLink(); ?>"><?php echo $fragment->getTitle(); ?></a></td>
           <td data-label="<?php echo $this->translate("Page from"); ?>"><?php echo $fragment->getPlag()->getLineFrom()->getPage()->getPageNumber(); ?></td>
           <td data-label="<?php echo $this->translate("Page to"); ?>"><?php echo $fragment->getPlag()->getLineTo()->getPage()->getPageNumber(); ?></td>
+          <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $fragment->getState()->getName(); ?></td>
           <td data-label="<?php echo $this->translate("Source"); ?>"><a href="<?php echo "/document_page/list/id/" . $fragment->getSource()->getLineFrom()->getPage()->getDocument()->getId(); ?>"><?php echo $fragment->getSource()->getLineFrom()->getPage()->getDocument()->getTitle(); ?></a></td>
           <td data-label="<?php echo $this->translate("Actions"); ?>" class="fit-content"><?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$fragment->actions)); ?></td>
         </tr>
