--- a/application/views/scripts/document/fragment/show.phtml
+++ b/application/views/scripts/document/fragment/show.phtml
@@ -4,22 +4,6 @@ $this->headTitle($this->title);
 ?>
 
 <h3>Details</h3>
-
-<?php if(!$this->fragmentIsRated) { ?>
-<p>
-<div class="btn btn-info">The fragment needs your approval.</div>
-</p>
-<?php } else { ?>
-<p>
-<div class="btn btn-success">The fragment is approved and therefore not editable anymore.</div>
-</p>
-<?php } 
-/*
-<p>
-<div class="btn btn-danger">The fragment was declined by multiple users and is not a plagiarism proof.</div>
-</p>
-*/
-?>
 <p>
   <?php echo $this->translate("Type"); ?>: <?php echo $this->fragment->getType()->getName(); ?><br/>
 </p>
@@ -58,7 +42,7 @@ $this->headTitle($this->title);
       </div>
       <div id="collapse<?php echo $rating->getId(); ?>" class="accordion-body collapse">
         <div class="accordion-inner">
-          <?php if($rating->getUser()->getId() == $this->meId){ ?>
+          <?php if($rating->getUser()->getId() == Zend_Registry::getInstance()->user->getId() && $this->fragment->getState()->getName() != 'approved'){ ?>
             <a href="/document_fragment/rate/id/<?php echo $rating->getId(); ?>/source/<?php echo $this->fragment->getId(); ?>"><i class="icon-edit icon-fam float-right edit-rating"></i></a>
           <?php } ?>
           <?php echo $rating->getReason() ? $rating->getReason() : '<i>No reason set</i>'; ?>
@@ -68,7 +52,7 @@ $this->headTitle($this->title);
   <?php endforeach; ?>
 </div>
 </p>
-<?php if(!$this->fragmentIsRated) { ?>
+<?php if($this->rateAble) { ?>
 <p>
 <a class="btn" href="/document_fragment/rate/source/<?php echo $this->fragment->getId(); ?>"><i class="icon-rate icon-fam"></i>Approve / decline</a>
 </p>
