--- a/application/views/scripts/notification/recent-activity.phtml
+++ b/application/views/scripts/notification/recent-activity.phtml
@@ -12,7 +12,7 @@ $this->headTitle($this->title);
             <h4>
               <span class="title"><i class="<?php echo $notification->getSource()->getIconClass(); ?> icon-fam"></i>
                 <?php
-                  if(!$notification->getSource()->getIsRemoved()){
+                  if(!$notification->getSource()->getState()->getName() != 'removed'){
                    echo sprintf($notification->getTitle(), "<a href=\"" . $notification->getSource()->getDirectLink() . "\">" . $notification->getSource()->getDirectName() . "</a>");
                  }else{
                    echo sprintf($notification->getTitle(), '<span class="removed-element">' . $notification->getSource()->getDirectName() . '</span>');
