--- a/application/views/scripts/report/list.phtml
+++ b/application/views/scripts/report/list.phtml
@@ -15,7 +15,7 @@ $this->headTitle($this->title);
       <?php foreach($this->paginator as $report): ?>
 
         <tr> 
-          <?php if($report->getState()->getName() == 'report_generated'): ?>
+          <?php if($report->getState()->getName() == 'generated'): ?>
           <td data-label="<?php echo $this->translate("Report"); ?>"><a href="/report/download/id/<?php echo $report->getId(); ?>"><?php echo $report->getTitle() . '_' . $report->getCreated()->format("Y-m-d"); ?></a></td>
           <?php else: ?>
           <td data-label="<?php echo $this->translate("Report"); ?>"><?php echo $report->getTitle() . '_' . $report->getCreated()->format("Y-m-d"); ?></td>
