--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -28,3 +28,34 @@
 
 <a class="btn btn-primary" href="<?php echo $this->uploadLink; ?>"><i class="icon-upload icon-fam"></i><?php echo $this->translate("Upload a file"); ?></a>
 
+<div class="modal hide" id="parseFile">
+  <form action="/file/parse" method="post">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">×</button>
+    <h3><?php echo $this->translate('Create document'); ?></h3>
+  </div>
+  <div class="modal-body">
+    <p><?php echo $this->translate('Please select the language of the text in the file, you want to create a document of.'); ?></p>
+    <div class="form-horizontal">
+        <fieldset>
+          <div class="control-group">
+            <label class="control-label" for="select01"><?php echo $this->translate('Language'); ?></label>
+            <div class="controls">
+              <input type="hidden" name="id" id="file-id" value="123"/>
+              <select id="select01" name="language">
+                <?php $languages = Zend_Registry::getInstance()->config->get('parser')->get('availableLanguages')->toArray(); ?>
+                <?php foreach($languages as $language): ?>
+                <option value="<?php echo $language; ?>"><?php echo $this->translate($language); ?></option>
+                <?php endforeach; ?>
+              </select>
+            </div>
+          </div>
+        </fieldset>
+      </div>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal"><?php echo $this->translate('Abort'); ?></a>
+    <button type="submit" class="btn btn-primary"><?php echo $this->translate('Create document'); ?></button>
+  </div>
+  </form>
+</div>
