--- a/application/views/scripts/partials/action-dropdown.phtml
+++ b/application/views/scripts/partials/action-dropdown.phtml
@@ -1,12 +1,15 @@
 <?php if(count($this->actions) > 0): ?>
-<div class="btn-group">
-  <button class="btn dropdown-toggle" data-toggle="dropdown"><?php echo $this->translate('Action'); ?> <span class="caret"></span></button>
-  <ul class="dropdown-menu pull-right">
-    <?php foreach($this->actions as $action): ?>
-      <li>
-        <a <?php if(array_key_exists('name', $action)): ?>class="<?php echo $action['name'] . '-action'; ?> tooltip-toggle"<?php endif; ?> href="<?php echo $action['link']; ?>" <?php if(array_key_exists('title', $action)): ?>title="<?php echo $this->translate($action['title']); ?>"<?php endif; ?>><img class="icon" src="<?php echo $this->baseUrl($action['icon']); ?>" alt="" /> <?php echo $this->translate($action['label']); ?></a>
-      </li>
-    <?php endforeach; ?>
-  </ul>
-</div>
-<?php endif;?>
+  <div class="btn-group">
+    <button class="btn dropdown-toggle" data-toggle="dropdown"><?php echo $this->translate('Action'); ?> <span class="caret"></span></button>
+    <ul class="dropdown-menu pull-right">
+      <?php foreach($this->actions as $action): ?>
+        <li>
+          <a 
+            <?php if(array_key_exists('data-toggle', $action)): ?>data-toggle="<?php echo $action['data-toggle']; ?>" <?php endif; ?>
+            <?php if(array_key_exists('data-id', $action)): ?>data-id="<?php echo $action['data-id']; ?>" <?php endif; ?>
+            href="<?php echo $action['link']; ?>" <?php if(array_key_exists('title', $action)): ?>title="<?php echo $this->translate($action['title']); ?>"<?php endif; ?>><img class="icon" src="<?php echo $this->baseUrl($action['icon']); ?>" alt="" /> <?php echo $this->translate($action['label']); ?></a>
+        </li>
+      <?php endforeach; ?>
+    </ul>
+  </div>
+<?php endif; ?>
