several translations added, some cleanup

--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -1,9 +1,3 @@
-<?php
-    $this->title = $this->translate("Login");
-    $this->headTitle($this->title);
-?>
-<?php
-	echo $this->loginForm;
-?>
+<?php	echo $this->loginForm; ?>
 <br/>
 <p><?php echo $this->translate("Did you lose your password?"); ?> <a href="/user/recover-password"><?php echo $this->translate("Recover password"); ?></a></p>
