--- a/application/views/scripts/user/register.phtml
+++ b/application/views/scripts/user/register.phtml
@@ -1,9 +1,1 @@
-<?php
-    $this->title = $this->translate("Registration");
-    $this->headTitle($this->title);
-?>
-
-<?php 
-    // Output the form.
-    echo $this->registerForm;	
-?>
+<?php echo $this->registerForm;	?>
