--- a/application/views/scripts/user/remove-account.phtml
+++ b/application/views/scripts/user/remove-account.phtml
@@ -1,9 +1,1 @@
-<?php
-    $this->title = $this->translate("Remove account");
-    $this->headTitle($this->title);
-?>
-
-<?php 
-    // Output the form.
-    echo $this->removalForm;	
-?>
+<?php echo $this->removalForm;?>
