--- a/application/views/scripts/user/edit-role.phtml
+++ b/application/views/scripts/user/edit-role.phtml
@@ -1,9 +1,1 @@
-<?php
-    $this->title = $this->translate("Roles");
-    $this->headTitle($this->title);
-?>
-
-<?php 
-    // Output the form.
-    echo $this->roleForm;	
-?>
+<?php echo $this->roleForm;	?>
