--- a/application/views/scripts/user/recover-password.phtml
+++ b/application/views/scripts/user/recover-password.phtml
@@ -1,9 +1,1 @@
-<?php
-    $this->title = $this->translate("Recover password");
-    $this->headTitle($this->title);
-?>
-
-<?php 
-    // Output the form.
-    echo $this->recoverForm;	
-?>
+<?php echo $this->recoverForm;?>
