some more translations, better error handling when parsing of files goes wrong

--- a/application/views/scripts/document/list.phtml
+++ b/application/views/scripts/document/list.phtml
@@ -19,7 +19,7 @@
           <td data-label="<?php echo $this->translate("Pages"); ?>"><?php if($document->getPages()->last()){ echo $document->getPages()->last()->getPageNumber(); } ?></td>
           <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $document->outputState; ?></td>
           <td data-label="<?php echo $this->translate("Actions"); ?>" class="fit-content">
-            <?php if($document->getState()->getName() == 'parsed'): ?>
+            <?php if(in_array($document->getState()->getName(), array('parsed', 'error'))): ?>
               <?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$document->actions)); ?>
             <?php endif; ?>
           </td>
