--- a/application/views/scripts/notification/recent-activity.phtml
+++ b/application/views/scripts/notification/recent-activity.phtml
@@ -18,7 +18,7 @@
               <a class="btn toggle-conversation" href="#" for="conversation-wrapper-<?php echo $notification->getId(); ?>" class="toggle-comments"><i class="icon-comments icon-fam"></i><?php echo $this->translate('Show conversation'); ?></a>
             </div>
           </div>
-          <p><?php echo $notification->getMessage(); ?></p>
+          <p><?php echo $this->translate($notification->getMessage()); ?></p>
 
         </div>
       </div>
